--- a/Judul-1/index.html
+++ b/Judul-1/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="hero-photo">
-                <img src="profile.jpeg" alt="Foto Profil Sultan Bani Hakim" class="profile-img">
+                <img src="ImageFolder/profile.jpeg" alt="Foto Profil Sultan Bani Hakim" class="profile-img">
             </div>
 
         </div>
