--- a/Judul-1/project.html
+++ b/Judul-1/project.html
@@ -15,17 +15,28 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="project.html">Project</a></li>
+                    <li><a href="project.html">Project</a></li> 
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <section id="main-content" style="padding: 100px 0; min-height: 70vh;">
+    <section id="pekerjaan" class="pekerjaan" style="min-height: 70vh;">
         <div class="container">
-            <h3>Halaman Project</h3>
-            <p>Konten Project akan ditambahkan di sini. Untuk sementara, ini adalah halaman kosong.</p>
+            <h3>Contoh Pekerjaan</h3>
+            
+            <div class="project-card">
+                <h4>Klasifikasi Risiko Penyakit Jantung</h4>
+                <p>Proyek ini bertujuan untuk mengembangkan dan mengevaluasi model machine learning untuk klasifikasi risiko penyakit jantung.</p>
+                <span class="tag">CRISP-DM</span><span class="tag">Machine Learning</span><span class="tag">Python</span>
+            </div>
+
+            <div class="project-card">
+                <h4>Segmentasi Pelanggan E-commerce Menggunakan Metode RFM dan Algoritma K-Means Clustering</h4>
+                <p>Mengidentifikasi dan mengelompokkan pelanggan e-commerce ke dalam segmen-segmen yang homogen berdasarkan perilaku pembelian (RFM).</p>
+                <span class="tag">Python</span><span class="tag">Data Mining</span><span class="tag">Algoritma</span>
+            </div>
             </div>
     </section>
 
