--- a/Judul-1/contact.html
+++ b/Judul-1/contact.html
@@ -33,7 +33,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Sultan Bani Hakim. Teknik Informatika, Unila.</p>
+            <p>&copy; 2025 Sultan Bani Hakim. Teknik Informatika, Universitas Lampung.</p>
         </div>
     </footer>
 
